// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redux should render corecttly! Panel should work properly! 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <Connect(Component) />
</ContextProvider>
`;

exports[`redux should render corecttly! PanelHotel should work properly! 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <Connect(PanelHotel) />
</ContextProvider>
`;

exports[`redux should render corecttly! checks for html changes in HotelForm 1`] = `
<div>
  <div
    className="form-group"
  >
    <label
      htmlFor="title"
    >
      Name
    </label>
    <input
      className="form-control"
      name="name"
      placeholder="Hotel name"
      type="text"
    />
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="title"
    >
      Price
    </label>
    <input
      className="form-control"
      name="price"
      placeholder="Price"
      type="text"
    />
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="videoUrl"
    >
      Hotel Url
    </label>
    <input
      className="form-control"
      name="image"
      placeholder="Image Url"
      type="text"
    />
  </div>
</div>
`;
